deploy (fixed spacing problem)

--- a/src/components/Home/Search.css
+++ b/src/components/Home/Search.css
@@ -15,7 +15,8 @@
   background-color: white;
   position: absolute;
   left: 0;
-  top: 380px;
+  /* top: 380px; */
+  top: 340px;
 }
 
 .search > input {
@@ -24,7 +25,8 @@
   position: absolute;
   left: 0;
   height: 30px;
-  top: 420px;
+  /* top: 420px; */
+  top: 380px;
   border: none;
 }
 
@@ -35,7 +37,8 @@
 .search > button {
   position: absolute;
   left: 0;
-  top: 480px;
+  /* top: 480px; */
+  top: 440px;
   text-transform: inherit !important;
   background-color: #ff7779;
   color: white;
